--- a/frontend/src/app/modal/create-edit-modal/create-edit-modal.component.html
+++ b/frontend/src/app/modal/create-edit-modal/create-edit-modal.component.html
@@ -6,19 +6,17 @@
       <h2>Create Category</h2>
 	  <form>
 		<label class="labelTitle">Title</label>
-		<input #titleInput id="categoryTitle" class="inputTitle" placeholder="Work, School, Privacy etc...">
+		<input type="text" #titleInput id="categoryTitle" class="inputTitle" placeholder="Work, School, Privacy etc...">
 
-	  <br>
-	  <br>
+	  <br><br>
 
 		<label class="labelDescription">Description (Optional)</label>
-		<input #descInput id="categoryDescription" class="inputDescription" placeholder="For my personal use etc...">
+		<input type="text" #descInput id="categoryDescription" class="inputDescription" placeholder="For my personal use etc...">
 
-	  <br>
-	  <br>
+	  <br><br>
 
 		<label class="labelColor">Color (Optional)</label>
-		<input #colorInput id="categoryColor" class="inputColorPicker" placeholder="Do not use at the moment">
+		<input type="text" #colorInput id="categoryColor" class="inputColorPicker" placeholder="Do not use at the moment">
 
 	  </form>
     </div>
@@ -26,8 +24,19 @@
     <div *ngIf="mode === 'editCategory'">
       <h2>Edit Category</h2>
 	  <form>
+        <label class="labelTitle">Title</label>
+        <input type="text" #titleInput placeholder="Category title">
 
-	  </form>
+        <br><br>
+
+        <label>Description (Optional)</label>
+        <input type="text" #descInput placeholder="Description">
+
+        <br><br>
+
+        <label>Color (Optional)</label>
+        <input type="text" #colorInput placeholder="Color code">
+      </form>
     </div>
 	<br>
 	<button (click)="submitForm()">{{ mode === 'createCategory' ? 'Create' : 'Update' }}</button>
