--- a/frontend/src/app/pages/manage/manage.component.html
+++ b/frontend/src/app/pages/manage/manage.component.html
@@ -6,6 +6,8 @@
         <span *ngIf="category.description"> - {{ category.description }}</span>
         <span *ngIf="category.color"> - {{ category.color }}</span>
         <button (click)="showModal('editCategory', category)" style="margin-left: 15px;">Edit Category</button>
+        <button mat-button color="warn" style="margin-left:15px;" (click)="onDeleteCategory(category.id)">Delete</button>
+        <br><br>
     </li>
 </ul>
 
