--- a/frontend/src/app/pages/manage/manage.component.html
+++ b/frontend/src/app/pages/manage/manage.component.html
@@ -1,15 +1,34 @@
-<button (click)="showModal('createCategory')">Create new Category</button>
+<div class="Categories">
+    <h1>Categories</h1>
+    <button (click)="showModal('createCategory')">Create new Category</button>
+        
+    <ul>
+        <li *ngFor="let category of allCategories | async">
+            <span>{{ category.title }}</span>
+            <span *ngIf="category.description"> - {{ category.description }}</span>
+            <span *ngIf="category.color"> - {{ category.color }}</span>
+            <button (click)="showModal('editCategory', category)" style="margin-left: 15px;">Edit Category</button>
+            <button mat-button color="warn" style="margin-left:15px;" (click)="onDeleteCategory(category.id)">Delete</button>
+            <br><br>
+        </li>
+    </ul>
+</div>
 
-<ul>
-    <li *ngFor="let category of allCategories | async">
-        <span>{{ category.title }}</span>
-        <span *ngIf="category.description"> - {{ category.description }}</span>
-        <span *ngIf="category.color"> - {{ category.color }}</span>
-        <button (click)="showModal('editCategory', category)" style="margin-left: 15px;">Edit Category</button>
-        <button mat-button color="warn" style="margin-left:15px;" (click)="onDeleteCategory(category.id)">Delete</button>
-        <br><br>
-    </li>
-</ul>
+<div class="Statuses">
+    <h1>Statuses</h1>
+    <button (click)="showModal('createStatus')">Create new Status</button>
+
+    <ul>
+        <li *ngFor="let status of allStatuses | async">
+            <span>{{ status.title }}</span>
+            <span *ngIf="status.description"> - {{ status.description }}</span>
+            <span *ngIf="status.color"> - {{ status.color }}</span>
+            <button (click)="showModal('editStatus', status)" style="margin-left: 15px;">Edit Status</button>
+            <button mat-button color="warn" style="margin-left: 15px;" (click)="onDeleteStatus(status.id)">Delete</button>
+            <br><br>
+        </li>
+    </ul>
+</div>
 
 <app-create-edit-modal 
     *ngIf="isModalVisible" 
